--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-  background-color: #f5f5f5; /* cinza claro */
-  font-family: Arial, sans-serif;
+  background-color: #E8EDFF; /* cinza claro */
+  font-family: Poppins, sans-serif;
 }
 
 h1 {
-  color: #000080; /* azul marinho */
+  color: #0F3FEE; /* azul marinho */
   text-align: center;
 }
 
@@ -19,7 +19,7 @@ ul {
 }
 
 img {
-  border-radius: 8px;
+  border-radius: 10px;
 }
 
 table {
@@ -29,13 +29,13 @@ table {
 }
 
 table, th, td {
-  border: 1px solid #000;
+  border: 1px solid #0F3FEE;
   padding: 8px;
   text-align: center;
 }
 
 a {
-  color: #000080; /* mesmo azul do H1 */
+  color: #0F3FEE; /* mesmo azul do H1 */
   text-decoration: none;
 }
 
@@ -44,7 +44,7 @@ a:hover {
 }
 
 button {
-  background-color: #000080;
+  background-color: #0F3FEE;
   color: #fff;
   padding: 10px 20px;
   border: none;
