--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 body {
-  background-color: #F2F3FF; /* cinza claro */
+  background-color: #F2F3FF; 
   font-family: Poppins, sans-serif;
 }
 
 h1 {
-  color: #0F3FEE; /* azul marinho */
+  color: #0F3FEE; 
   text-align: center;
 }
 
 p {
-  color: #333333; /* cinza escuro */
-  font-size: 18px;
+  color: #333333; 
+  font-size: 16px;
   text-align: justify;
 }
 
