--- a/style.css
+++ b/style.css
@@ -46,14 +46,41 @@ a:hover {
 }
 
 button {
-  background-color: #0F3FEE;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  position: center;
+selector{
+    width: fit-content !important;
+    overflow: hidden;
 }
 
-button:hover {
-  background-color: #87cefa; /* azul claro */
+selector .elementor-button:hover::before {
+  animation: brilho 0.8s linear;
+}
+
+selector .elementor-button::before {
+  content: "";
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  background: #ffffff;
+  box-shadow: 0 0 30px 20px #ffffffaa;
+  transform: skewX(-30deg);
+  mix-blend-mode: plus-lighter;
+}
+
+@keyframes brilho {
+  0% {
+    opacity: 0;
+    left: 0%;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    left: 100%;
+  }
+}
 }
