--- a/style.css
+++ b/style.css
@@ -46,41 +46,13 @@ a:hover {
 }
 
 button {
-selector{
-    width: fit-content !important;
-    overflow: hidden;
+  background-color: #000080;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
 }
 
-selector .elementor-button:hover::before {
-  animation: brilho 0.8s linear;
-}
-
-selector .elementor-button::before {
-  content: "";
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  background: #ffffff;
-  box-shadow: 0 0 30px 20px #ffffffaa;
-  transform: skewX(-30deg);
-  mix-blend-mode: plus-lighter;
-}
-
-@keyframes brilho {
-  0% {
-    opacity: 0;
-    left: 0%;
-  }
-
-  50% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-    left: 100%;
-  }
-}
+button:hover {
+  background-color: #87cefa; /* azul claro */
 }
