--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 body {
-  background-color: #F2F3FF; 
-  font-family: Poppins, sans-serif;
+  background-color: #f5f5f5;
+  font-family: Arial, sans-serif;
 }
 
 h1 {
-  color: #0F3FEE; 
+  color: #000080;
   text-align: center;
 }
 
 p {
-  color: #333333; 
-  font-size: 16px;
+  color: #333333;
+  font-size: 18px;
   text-align: justify;
 }
 
@@ -19,7 +19,7 @@ ul {
 }
 
 img {
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 table {
@@ -29,20 +29,21 @@ table {
 }
 
 table, th, td {
-  border: 1px solid #0F3FEE;
+  border: 1px solid #000;
   padding: 8px;
   text-align: center;
 }
 
 a {
-  color: #0F3FEE; /* mesmo azul do H1 */
+  color: #000080;
   text-decoration: none;
-  position: center;
+  display: block;
+  text-align: center;
+  margin-top: 20px;
 }
 
 a:hover {
-  color: #87cefa; /* azul claro no hover */
-  position: center;
+  color: #87cefa;
 }
 
 button {
@@ -51,8 +52,10 @@ button {
   padding: 10px 20px;
   border: none;
   cursor: pointer;
+  display: block;
+  margin: 20px auto;
 }
 
 button:hover {
-  background-color: #87cefa; /* azul claro */
+  background-color: #87cefa;
 }
