--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ ul {
 
 img {
   border-radius: 8px;
+  position: center;
 }
 
 table {
@@ -54,6 +55,7 @@ button {
   cursor: pointer;
   display: block;
   margin: 20px auto;
+  position: center;
 }
 
 button:hover {
