--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #f5f5f5;
-  font-family: Arial, sans-serif;
+  background-color: #F2F3FF;
+  font-family: Poppins, sans-serif;
 }
 
 h1 {
